--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,55 @@ address {
   font-style: normal;
   line-height: inherit; }
 
+  
+ .desce:after {
+  position: absolute;
+  top: 180px;
+  left: 370px;
+  content: 'Parte: 1';
+  color: rgb(0, 0, 0);
+  width: 250px;
+  height: 1px;
+  background: #ff0000;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  transition: all 0.3s ease; 
+}
+
+.descer:after {
+  position: absolute;
+  top: 270px;
+  left: 370px;
+  content: 'Parte: 2';
+  color: rgb(0, 0, 0);
+  width: 250px;
+  height: 1px;
+  background: #ff0000;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  transition: all 0.3s ease; 
+}
+
+.descer2:after {
+  position: absolute;
+  top: 450px;
+  left: 460px;
+  content: 'Parte: 3';
+  color: rgb(0, 0, 0);
+  width: 250px;
+  height: 1px;
+  background: #ff0000;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  transition: all 0.3s ease; 
+}
+
 ol,
 ul,
 dl {
@@ -9807,8 +9856,8 @@ textarea.form-control {
     border-radius: 2px; }
 
 .sidebar-box {
-  margin-bottom: 30px;
-  padding: 25px;
+  padding: 10px;
+  margin-left: -1rem;
   font-size: 15px;
   width: 100%;
   float: left;
