--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,21 @@ address {
   -ms-transition: all 0.3s ease;
   transition: all 0.3s ease; 
 }
+.descer3:after {
+  position: absolute;
+  top: 350px;
+  left: 369px;
+  content: 'Parte: 3';
+  color: rgb(0, 0, 0);
+  width: 250px;
+  height: 1px;
+  background: #ff0000;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  transition: all 0.3s ease; 
+}
 
 ol,
 ul,
